--- a/frontend/materialize/sass/components/progress.scss
+++ b/frontend/materialize/sass/components/progress.scss
@@ -2,7 +2,7 @@
 .progress-meter {
   height:100%;
   position:fixed;
-  top:1.5%;
+  top:3%;
   z-index:5;
   padding-right: $gutter-width / 2;
 }
